# lsof-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
benches/: lsof.rs
src/: lib.rs  main.rs  procstat.rs  tests.rs  utils.rs
